# invariance_research

./: BENCHMARK_AUDIT_2026-03-30.md  README.md  package.json  pyproject.toml  tailwind.config.ts
docs/: account-usage-admin-auth-fixes.md  admin-ops-console.md  analysis-contract.md  analysis-workspace-stability-and-trade-only-rendering.md  design-system.md  engine-payload-consumption-and-rendering.md  first-successful-analysis-run-contract.md  full-implementation-dossier-source.md  ingestion-spec.md  logo-system-and-header-branding.md  parameter-stability-intake-contract.md  phase4-engine-integration.md  phase4-upload-workflow.md  phase5-live-diagnostics.md  phase6-saas-architecture.md  phase6b-commercial-ux.md  phase6c-diagnostic-lock-panel.md  phase7a-durability-and-queues.md  phase7b-ops-and-exports.md  phase8-launch-readiness.md  product-shell.md  publications-workflow.md  real-analysis-rendering-and-empty-states.md  repo-aware-architecture-and-deployment-report-2026-04-17.md  ui-refinement-pass-header-workspace-theme.md  validation-report-and-pdf-export.md
scripts/: recalculate-usage.ts  run-analysis-worker.ts  run-export-worker.ts  run_bulletproof_engine.py
scripts/benchmarks/: bootstrap_benchmark_library.py  rebuild_manifest.py  validate_benchmark_library.py
src/app/: page.tsx  (+2 more)
tests/: chart-adapters-contract.test.ts  diagnostic-access-context-regression.test.ts  phase6b-commercial-ux.test.ts  phase7a-durability.test.ts  phase7b-ops-and-exports.test.ts  phase8-admin-ops-console.test.ts  phase8-launch-readiness.test.ts  phase9-account-usage-auth-fixes.test.ts
(+325 files in other folders)
